added custom colors to the tailwind config file and added to music.js

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,54 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* colors chosen before */
+  /* {"Blue Bell":"989fce","Pine Green":"0b7a75","Paradise Pink":"ee4266","Dark Purple":"4a2040","Raisin Black":"262730"} */
+
+  /* trying different colours */
+  /* CSS HEX */
+/* --bdazzled-blue: #3d5a80ff;
+--powder-blue: #c0e0deff;
+--light-pink: #edafb8ff;
+--dark-purple: #240115ff;
+--jazzberry-jam: #9a275aff; */
+
+/* CSS HSL */
+/* --bdazzled-blue: hsla(214, 35%, 37%, 1);
+--powder-blue: hsla(176, 34%, 82%, 1);
+--light-pink: hsla(351, 63%, 81%, 1);
+--dark-purple: hsla(326, 95%, 7%, 1);
+--jazzberry-jam: hsla(333, 60%, 38%, 1); */
+
+/* SCSS HEX */
+/* $bdazzled-blue: #3d5a80ff;
+$powder-blue: #c0e0deff;
+$light-pink: #edafb8ff;
+$dark-purple: #240115ff;
+$jazzberry-jam: #9a275aff; */
+
+/* SCSS HSL */
+/* $bdazzled-blue: hsla(214, 35%, 37%, 1);
+$powder-blue: hsla(176, 34%, 82%, 1);
+$light-pink: hsla(351, 63%, 81%, 1);
+$dark-purple: hsla(326, 95%, 7%, 1);
+$jazzberry-jam: hsla(333, 60%, 38%, 1); */
+
+/* SCSS RGB */
+/* $bdazzled-blue: rgba(61, 90, 128, 1);
+$powder-blue: rgba(192, 224, 222, 1);
+$light-pink: rgba(237, 175, 184, 1);
+$dark-purple: rgba(36, 1, 21, 1);
+$jazzberry-jam: rgba(154, 39, 90, 1); */
+
+/* SCSS Gradient */
+/* $gradient-top: linear-gradient(0deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-right: linear-gradient(90deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-bottom: linear-gradient(180deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-left: linear-gradient(270deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-top-right: linear-gradient(45deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-bottom-right: linear-gradient(135deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-top-left: linear-gradient(225deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-bottom-left: linear-gradient(315deg, #3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff);
+$gradient-radial: radial-gradient(#3d5a80ff, #c0e0deff, #edafb8ff, #240115ff, #9a275aff); */
