--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 #for-stephen {
     font-family: 'Meow Script';
-    font-size: 80px;
+    font-size: 580px;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -9,7 +9,7 @@
 }
 
 #for-stephen #first-name, #for-stephen #last-name {
-    font-size: 1rem;
+    font-size: 4rem;
     text-align: center;
     line-height: 1;
     /* color: #c6e2ff; */
@@ -36,4 +36,7 @@
     0 0 68px hsla(211, 89%, 53%, 0.88),
     0 0 108px hsl(211, 89%, 53%);
   }
+}
+#footer{
+  background-color:#240115;
 }
