all pages displaying in tables. experimenting with button types in nav.js

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,5 +1,14 @@
-#title{
+/* #title{
     color: #989fce;
   }
   
+ */
 
+/* ul{
+  display: inline-block;
+} */
+
+li{
+  display: inline;
+  padding: 2%;
+}
