--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -12,3 +12,12 @@ li{
   display: inline;
   padding: 2%;
 }
+
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.menuTypes{
+  display: block;
+}
